--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^2.22.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
+    "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
     "react-outside-click-handler": "^1.3.0",
     "react-router-dom": "^5.2.0",
